# music_manager

./: .gitignore  Cargo.toml  Changelog.md  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
src/: category.rs  category_config.rs  category_description.rs  cli.rs  commands.rs  config.rs  genre_description.rs  lib.rs  main.rs  music_tag.rs  normalize.rs  tag.rs
src/commands/: add.rs  cat.rs  category.rs  check.rs  down.rs  download.rs  genre.rs
