[package]
name = "music_manager"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# made by me

[dependencies]
directories = "4.0" # to get the user directories
glob = "0.3" # to read directories
id3 = "1.2" # to read and manipulate mp3 files
clap = { version = "4.0", features = ["derive"] } # command line interface
colored = "2" # color output and bold and other cool output for terminal
serde = { version = "1.0", features = ["derive"] }# serializing and deserializing
toml = "0.5" # toml format
