[package]
name = "music_manager"
version = "0.0.2"
authors = ["Earthgame_s <earthgame_s@outlook.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Earthgames/music_manager"
categories = ["command-line-utilities"]

[dependencies]
directories = "5.0" # to get the user directories
glob = "0.3" # to read directories
lofty = "0.18" # read tags and manipulate all music tags
clap = { version = "4.0", features = ["derive", "cargo", "env"] } # command line interface
clap_complete = "4.4"
colored = "2.0" # color output and bold and other cool output for terminal
serde = { version = "1.0", features = [
    "derive",
] } # serializing and deserializing
toml = "0.8" # toml format
simplelog = "0.12" # logging
log = "0.4" # logging
#musicbrainz_rs = "0.5.0" maybe use of later

[build-dependencies]
clap = { version = "4.0", features = ["derive"] } # command line interface
clap_mangen = "0.2.16" # generate man page
clap_complete = "4.4"